feat: add order field to picture entity